syntax = "proto3";
package task;
import "google/protobuf/empty.proto";

option go_package = "github.com/ZolotarevAlexandr/yl_final/orchestrator/grpc";

service TaskService {
  rpc GetTask(google.protobuf.Empty) returns (TaskResponse);
  rpc SubmitTask(TaskResult)    returns (ResultAck);
}

message TaskResponse {
  string id = 1;
  double arg1 = 2;
  double arg2 = 3;
  string operation = 4;
  int32 operation_time = 5;
}

message TaskResult {
  string id = 1;
  double result = 2;
}

message ResultAck {
  string status = 1;
}
